# luck

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
crates/luck/: Cargo.toml  README.md
crates/luck/src/: lib.rs
crates/luck_ast/: Cargo.toml  README.md
crates/luck_ast/src/: builder.rs  expr.rs  lib.rs  node.rs  query.rs  shared.rs  span.rs  stmt.rs  synth.rs  transform.rs  types.rs  visitor.rs
crates/luck_benchmark/: Cargo.toml  README.md  minsize.snap
crates/luck_benchmark/benches/: bundler.rs  codegen.rs  formatter.rs  lexer.rs  linter.rs  minifier.rs  parser.rs  semantic.rs  synth.rs
crates/luck_benchmark/src/: corpus.rs  lib.rs
crates/luck_benchmark/tests/: metrics.rs
crates/luck_bundler/: Cargo.toml  README.md
crates/luck_bundler/src/: emitter.rs  graph.rs  lib.rs  module.rs  require_extraction.rs
crates/luck_bundler/tests/: integration.rs
crates/luck_bundler/tests/snapshots/: integration__basic_bundle.snap  integration__deep_chain.snap  integration__diamond_deps.snap  integration__init_module.snap  integration__lua52_goto_in_module.snap  integration__lua53_bitwise_ops.snap  integration__lua54_const_close_attrs.snap  integration__luau_alias_require.snap  integration__luau_init_luau.snap  integration__luau_luaurc_inheritance.snap  integration__luau_relative_require.snap  integration__luau_string_interpolation.snap  integration__luau_type_annotations.snap  integration__module_required_by_many.snap  integration__multiple_requires.snap  integration__nested_deps.snap  integration__nil_return.snap  integration__no_deps.snap
crates/luck_cli/: Cargo.toml  README.md
crates/luck_cli/src/: args.rs  cli.rs  commands.rs  lib.rs  main.rs  minify_flags.rs  output.rs  project.rs  render.rs
crates/luck_cli/src/commands/: build.rs  bundle.rs  check.rs  fmt.rs  graph.rs  init.rs  lint.rs  lsp.rs  minify.rs
crates/luck_cli/tests/: exit_codes.rs
crates/luck_codegen/: Cargo.toml  README.md
crates/luck_codegen/src/: compact.rs  lib.rs  separator.rs
crates/luck_codegen/tests/it/: compact.rs  main.rs  roundtrip.rs
crates/luck_core/: Cargo.toml  README.md
crates/luck_core/src/: config.rs  diagnostics.rs  editorconfig.rs  format_options.rs  lib.rs  source_io.rs  transform_config.rs  types.rs
crates/luck_core/src/config/: filter.rs  load.rs  resolve.rs  schema.rs
crates/luck_formatter/: Cargo.toml  README.md
crates/luck_formatter/src/: ast_equiv.rs  comments.rs  format_block.rs  format_expr.rs  format_function.rs  format_stmt.rs  format_table.rs  format_type.rs  ir.rs  lib.rs  numbers.rs  printer.rs  quotes.rs  sort_requires.rs  tokens.rs
crates/luck_formatter/tests/it/: comments.rs  expressions.rs  functions.rs  idempotency.rs  luau.rs  main.rs  polish.rs  statements.rs  synthetic.rs  tables.rs
crates/luck_lexer/: Cargo.toml  README.md
crates/luck_lexer/src/: cursor.rs  lexer.rs  lib.rs  number.rs  search.rs  string.rs
crates/luck_lexer/tests/it/: comments.rs  errors.rs  main.rs  numbers.rs  strings.rs  tokens.rs  versions.rs
crates/luck_linter/: Cargo.toml  README.md
crates/luck_linter/src/: bus.rs  cfg.rs  diagnostic.rs  fix.rs  format_pattern.rs  lib.rs  path.rs  roblox.rs  rule.rs  suggest.rs  suppression.rs  test_support.rs
crates/luck_linter/src/rules/: accessing_uninitialized.rs  almost_swapped.rs  ambiguous_newline_call.rs  bad_string_escape.rs  builtin_global_write.rs  comment_directive.rs  compare_nan.rs  comparison_precedence.rs  constant_table_comparison.rs  cyclomatic_complexity.rs  deprecated.rs  divide_by_zero.rs  duplicate_conditions.rs  duplicate_function.rs  duplicate_keys.rs  duplicate_parameter.rs  empty_block.rs  for_range.rs  format_string.rs  global_usage.rs  global_used_as_local.rs  if_same_then_else.rs  implicit_return.rs  incorrect_stdlib_use.rs  integer_parsing.rs  invalid_lint_filter.rs  loop_executes_once.rs  manual_table_clone.rs  merge_adjacent_locals.rs  misleading_and_or.rs  mismatched_arg_count.rs  mixed_table.rs  mod.rs  multiple_statements_per_line.rs  must_use.rs  mutating_uninitialized.rs  parenthesized_conditions.rs  placeholder_read.rs  redefining_local.rs  redundant_native_attribute.rs  (+25 more)
crates/luck_linter/tests/: idiomatic_fixtures.rs
crates/luck_lsp/: Cargo.toml  README.md
crates/luck_lsp/src/: backend.rs  config.rs  diagnostics.rs  lib.rs  line_index.rs  serve.rs  stdlib_render.rs
crates/luck_lsp/src/providers/: code_action.rs  completion.rs  cursor.rs  definition.rs  document_link.rs  document_symbol.rs  folding.rs  highlights.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  syntax_tree.rs  workspace_symbol.rs
crates/luck_lsp/tests/: integration.rs
crates/luck_minifier/: Cargo.toml  README.md
crates/luck_minifier/src/: expr.rs  lib.rs  name_gen.rs  tokens.rs
crates/luck_minifier/src/transforms/: explicit_self.rs  fold_constants.rs  inline_locals.rs  lift_locals.rs  merge_locals.rs  mod.rs  remove_dead_code.rs  rename_locals.rs  shorten_numbers.rs  shorten_strings.rs  (+3 more)
crates/luck_minifier/tests/: correctness.rs
crates/luck_parser/: Cargo.toml  README.md
crates/luck_parser/src/: attributes.rs  expr.rs  lib.rs  luau.rs  parser.rs  stmt.rs  validate.rs
crates/luck_resolver/: Cargo.toml  README.md
crates/luck_resolver/src/: lib.rs  luau.rs
crates/luck_semantic/: Cargo.toml  README.md
crates/luck_semantic/src/: builder.rs  lib.rs  nodes.rs  resolve.rs  scope.rs  stdlib_load.rs  stdlib_model.rs
crates/luck_semantic/stdlib_data/: lua51.toml  lua52.toml  lua53.toml  lua54.toml  lua55.toml  luau.toml  luau_roblox.toml  roblox_api.toml  roblox_enums.toml
crates/luck_semantic/tests/: drift.rs  stdlib_model.rs
crates/luck_testgen/: Cargo.toml  README.md
crates/luck_testgen/src/: full.rs  lib.rs
crates/luck_testgen/tests/: roundtrip.rs
crates/luck_token/: Cargo.toml  README.md
crates/luck_token/src/: code_buffer.rs  comment.rs  lib.rs  literal.rs  span.rs  token.rs  version.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_format.rs  fuzz_lexer.rs  fuzz_minify.rs  fuzz_parser.rs
(+138 files in other folders)
