[package]
name = "luck_ast"
version.workspace = true
authors.workspace = true
categories.workspace = true
description = "AST node types, visitor pattern, and mutable transform infrastructure for Lua/Luau."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luck_token.workspace = true

