[package]
name = "luck_codegen"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
description = "Compact code printer and source-slicing emitter for Lua ASTs."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luck_token.workspace = true
luck_ast.workspace = true

[dev-dependencies]
luck_parser.workspace = true
luck_lexer.workspace = true
