[package]
name = "luck_linter"
version = "0.11.0"
authors.workspace = true
categories.workspace = true
description = "Lua/Luau linter with scope-aware analysis and auto-fix support"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rayon.workspace = true
luck_token = { workspace = true }
luck_ast = { workspace = true }
luck_parser = { workspace = true }
luck_semantic = { workspace = true }
luck_core = { workspace = true }
