[package]
name = "luck_linter"
version.workspace = true
authors.workspace = true
categories.workspace = true
description = "Lua and Luau linter with scope-aware analysis and autofix"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rayon.workspace = true
luck_token = { workspace = true }
luck_ast = { workspace = true }
luck_parser = { workspace = true }
luck_semantic = { workspace = true }
luck_core = { workspace = true }
