[package]
name = "luck_resolver"
version.workspace = true
authors.workspace = true
categories.workspace = true
description = "Module resolution for Lua 5.x search paths and Luau relative imports with @aliases."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luck_core.workspace = true
luck_token.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
