[package]
name = "luck_semantic"
version.workspace = true
authors.workspace = true
categories.workspace = true
description = "Scope analysis, symbol resolution, and standard library definitions for Lua/Luau"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luck_token = { workspace = true }
luck_ast = { workspace = true }
compact_str = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
luck_parser = { workspace = true }
